--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,31 +4,22 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 
-
-.containerHeader{
-    max-width: 900px;
-    margin: 40px 0px 20px 0px;
-}
 
 .container {
-    max-width: 990px;
+    max-width: 900px;
+    height: 100vh;
+    width: 100vw;
     margin: auto;
     display: flex;
+    justify-content: center;
     justify-content: space-between;    
-    justify-content: space-between;
+    align-items: center;
 }
 
-.sideLeft, .sideRight {
-    width: 450px;
-}
+
 
 .sideLeft {
     flex: 1;
@@ -39,9 +30,9 @@ body {
 }
 
 .title {
+    margin-top: 15px;
     font-size: 45px;
     color: #227c9d;
-    margin: 0;
 }
 
 .desc {
@@ -49,31 +40,27 @@ body {
     line-height: 20px;
 }
 
-.inputs {
+.inputs input{
     display: flex;
     flex-direction: column;
-    
-}
-
-.inputAlt,
-.inputPes {
     width: 100%;
-    height: 40px;
+    border: 0;
     border-bottom: 2px solid #227c9d;
-    border-top: 0;
-    border-left: 0;
-    border-right: 0;
     margin: 10px 0px;
     outline: 0;
-    padding: 10px 0px 10px 10px;
+    padding: 10px 2px;
     font-size: 18px;
     background-color: transparent;
-    color: #333;
 }
+
+.inputs input:disabled {
+    opacity: .5;
+}
+
 
 .Btn {
     width: 100%;
-    margin-top: 40px;
+    margin-top: 30px;
     height: 50px;
     border: 0;
     background-color: #227c9d;
@@ -84,13 +71,24 @@ body {
     
 }
 
+
+
 .Btn:hover {
     background-color: #0b5773;
+    transition: all ease 0.3s;
+}
+
+.Btn:disabled {
+    opacity: .5;
+    cursor: auto;
+    background-color: #227c9d;
+    transition:none;
 }
 
 /* side right */
 
 .sideRight {
+    margin-left: 40px;
     flex: 1;
     display: flex;
 }
@@ -102,3 +100,84 @@ body {
     gap: 20px;
 }
 
+.rightBig {
+    flex: 1;
+    display: flex;
+}
+
+
+
+.rightArrow {
+    position: absolute;
+    background-color: #227c9d;
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    display: flex;   
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    margin-left: -35px;
+    margin-top: 85px;
+    transition: all ease 0.3s;
+}
+
+.rightArrow:hover {
+    background-color: #0b5773;
+}
+
+
+@media (max-width: 770px) {
+
+    .main .container {
+        text-align: justify;
+        padding: 0px 20px;
+        flex-direction: column;
+    }
+    .sideLeft,.sideRight {
+        margin-top: 10px;
+        margin-left: 0px;
+    }
+
+    .sideLeft {
+        display: flex;
+        justify-content: space-around;
+        margin-left: 30px;
+    }
+
+
+    .sideRight {
+        padding-bottom: 10px;
+    }
+
+    .title {
+        text-align: center;
+        margin-top: 0px;
+        margin-bottom: 5px;
+    }
+
+    
+    
+    .rightArrow {
+        margin-left: 0;
+        margin-top: 0;
+        border-radius: 10px;
+    }
+    .grid {
+        width: 100%;
+        gap: 10px;
+    }
+    .inputs input {
+        padding: 5px 0px;
+    }
+
+} 
+
+@media (max-width: 468px) {
+    .title {
+        font-size: 35px;
+    }
+    .desc {
+        font-size: 14px;
+    }
+}
