--- a/src/components/GridItem/GridItem.module.css
+++ b/src/components/GridItem/GridItem.module.css
@@ -20,7 +20,7 @@
 }
 
 .gridTitle {
-    font-size: 23px;
+    font-size: 25px;
     font-weight: bold;
     margin-top: 5px;
 }
@@ -28,4 +28,26 @@
 .gridInfo {
     font-size: 15px;
     margin-top: 10px;
+}
+
+.seuImc {
+    margin: 20px 0px;
+}
+
+@media (max-width: 468px) {
+
+    .main {
+        padding: 10px;
+    }
+
+    .gridIcon {
+        width: 50px;
+        height: 50px;
+    }
+    .gridTitle {
+        font-size: 20px;
+    }
+    .gridInfo {
+        font-size: 12px;
+    }
 }
